dnl Process this file with autoconf to produce a configure script.
AC_INIT(Data.c)
AM_INIT_AUTOMAKE(isoqlog, 2.1)
#AC_INIT(isoqlog, 2.1, ing@enderunix.org))
#AC_PREREQ(2.53)
#AC_COPYRIGHT(Copyright EnderUNIX 2002)
AC_REVISION($Revision: 1.16 $)

#AC_ARG_PROGRAM

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_AWK

dnl Checks for libraries.
dnl Replace `main' with a function in -le:
#AC_CHECK_LIB(e, main)
dnl Replace `main' with a function in -links:
#AC_CHECK_LIB(inks, main)

dnl Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h strings.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_SIZE_T
AC_STRUCT_TM

dnl Checks for library functions.
AC_CHECK_FUNCS(gethostname mkdir strdup strerror strstr)

AC_OUTPUT(
Makefile
htmltemp/Makefile
htmltemp/images/Makefile
htmltemp/library/Makefile
lang/Makefile
tr/Makefile
)
